--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 alembic==1.8.1
 bcrypt==4.0.0
 black==22.3.0
+blinker==1.5
 Bootstrap-Flask==2.1.0
 coverage==6.4.1
 email-validator==1.2.1
 Flask==2.2.2
 Flask-Login==0.6.2
+Flask-mail==0.9.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
