--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ black==22.3.0
 blinker==1.5
 Bootstrap-Flask==2.1.0
 coverage==6.4.1
+coverage-badge==1.1.0
 email-validator==1.2.1
 Flask==2.2.2
 Flask-Login==0.6.2
